--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,8 @@
    
   }
 
+
+  
 .backgroundimg{
     background-image: url(images/white.jpg);
     height: 100%;
@@ -151,7 +153,7 @@
 .endless7 {
    
     position: fixed;
-    top: 60%;
+    top: 65%;
     width: 55px;
     height: 55px;
     border: none;
@@ -163,7 +165,7 @@
 .endless7:hover {
    
     position: fixed;
-    top: 60.8%;
+    top: 65.8%;
     width: 55px;
     height: 55px;
     border: none;
@@ -179,8 +181,19 @@
   }
 
 
-#fade1, #fade2, #fade3, #fade4, #fade5, #fade6, #fade7{
+#fade1, #fade2, #fade3, #fade4, #fade5, #fade6, #fade7, #fade8 {
 display: none;
+}
+
+
+
+.showcase{
+    
+  width: 50vw;
+  height: 80vh;
+    background: black;
+    border-radius: 3px;
+    
 }
 
 
