--- a/assets/style.css
+++ b/assets/style.css
@@ -21,7 +21,7 @@
     height: 100%;
     width: 100%;
     background-size: var(--backgroundSize);
-    animation: movingBackground 7s linear infinite;
+    animation: movingBackground 12s linear infinite;
 }
 .lang1{
     margin-top: .1em;
@@ -133,8 +133,17 @@ h4 {
     z-index: 200
   }
   
+  .codeIcons{
+      margin-bottom: 10%;
+      border-bottom: thick solid white;
+      padding-bottom: 10%;
+  }
+
+
+
+
   .img1{
-   border-radius: 5%;
+   
     padding-right: 2%;
    max-width: 100%;
   
@@ -242,6 +251,8 @@ display: none;
     
 }
 
+
+
 .innertitle{
    margin: 25px;
   
@@ -264,6 +275,7 @@ display: none;
     padding: 0 4% 0 4%;
     text-align: left;
     line-height: 1.4;
+    padding-bottom: 10%;
     
   
 }
@@ -291,15 +303,21 @@ display: none;
     position: absolute;
     width: 80%;
     top: 0;
-    height: 89.1%;
-    overflow: hidden;
+    height: auto;
+    /* height: 89.1%; */
+    /* overflow: hidden; */
     transition: all 1s;
    left: 10%;
    right: 10%;
   margin-top: 140px;
    background: #1e1f24;
   }
-  
+  .slider1 {
+      height: 89.1%;
+  overflow: hidden;
+  }
+ 
+
   .slider.close {
     top: 100%;
     height: 0;
