--- a/assets/style.css
+++ b/assets/style.css
@@ -171,7 +171,7 @@ h4 {
 
 .img5 {
    
-   max-width: 100px; 
+   max-height: 100px;
 }
 
 .img1{
@@ -311,6 +311,7 @@ display: none;
     
   
 }
+
 .spangold {
     font-family: 'Montserrat', sans-serif;
     color: rgb(212, 203, 118);
@@ -338,78 +339,77 @@ display: none;
     height: auto;
     /* height: 89.1%; */
     /* overflow: hidden; */
-    transition: all 1s;
+    transition: all 1.3s;
    left: 10%;
    right: 10%;
   margin-top: 140px;
-   background: #1e1f24 url("images/black.jpg");
+   background: #1e1f24  /*url("images/black.jpg"); */
   }
   .slider1 {
-      height: 89.1%;
-  overflow: hidden;
-  }
- 
+    height: 89.1%;
+overflow: hidden;
+}
 
   .slider.close {
     top: 100%;
     height: 0;
    background: white;
   }
+
+  
+
+.hidemenow {
+    display: none;
+}
+  
 /* background animation */
+
+.hide2nd{
+    display: none;
+}
+
+.page-footer {
+
+    background: #1e1f24!important;
+}
+.footer-copyright{
+    background: #1e1f24!important;
+}
+#aboutme:hover {
+   
+    cursor: pointer;
+    margin-bottom: 9%;
+}
+
+#mywork:hover {
+ 
+    cursor: pointer;
+    margin-bottom: 9%;
+}
+ 
+.aboutmeunderline {
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    -moz-animation: glow 1s ease-in-out infinite alternate;
+    animation: glow 1s ease-in-out infinite alternate;
+}
+.myworkunderline {
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    -moz-animation: glow 1s ease-in-out infinite alternate;
+    animation: glow 1s ease-in-out infinite alternate;
+
+}
 
 @keyframes movingBackground {
     from { background-position: 0 0;}
     to {background-position: var(--backgroundSize) var(--backgroundSize);}
 }
 
-
-
-
-/* LOADING PAGE ANIMATION IN THE WORKS */
-
-/* .loader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-}
-
-.loader div {
-    width: 100%;
-    height: 100%;
-    background: #191a1e;
-    transform: scaleY(0);
-    animation: animate 1.5s ease ;
-} */
-
-
-
-
-/* @keyframes animate
-{
-
-    0%{
-        transform-origin: top;
-        transform: scaleY(0);
+@-webkit-keyframes glow {
+    from {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ffffff, 0 0 40px #ffffff, 0 0 50px #ffffff, 0 0 60px #ffffff, 0 0 70px #ffffff;
     }
-    25%{
-        transform-origin: top;
-        transform: scaleY(1);
-    }
-    75%{
-        transform-origin: bottom;
-        transform: scaleY(1);
-    }
-    100%{
-        transform-origin: bottom;
-        transform: scaleY(1);
-    }
-} */
-
-@media only screen and (max-width: 666px) {
-    .imgbox {
-        height: 20vh;
+    to {
+      text-shadow: 0 0 20px #fff, 0 0 30px #ffffff, 0 0 40px #ffffff, 0 0 50px #ffffff, 0 0 60px #ffffff, 0 0 70px #ffffff, 0 0 80px #ffffff;
     }
   }
+
