testing javascript refactor

--- a/assets/style.css
+++ b/assets/style.css
@@ -258,7 +258,7 @@ h4 {
   }
 
 
-#fade1, #fade2, #fade3, #fade4, #fade5, #fade6, #fade7, #fade8{
+  #fade0 , #fade1, #fade2, #fade3, #fade4, #fade5, #fade6, #fade7, #fade8{
 display: none;
 }
 
