created working links in contact me and modal

--- a/assets/style.css
+++ b/assets/style.css
@@ -22,20 +22,23 @@ body {
 	word-spacing: 2px;
 }
 
-.borderline{
-    border-top: thick solid white;
-    padding-top: 11%!important;
+.borderline {
+	border-top: thick solid white;
+	padding-top: 11%!important;
 }
-.imglink{
-    padding-bottom: 10%!important;
-    max-width: 80%!important;
+
+.imglink {
+	padding-bottom: 10%!important;
+	max-width: 80%!important;
 }
+
 .imglink:hover {
 	opacity: .8;
 }
 
 .titletext {
 	margin: 5%;
+	font-weight: 900;
 }
 
 .mytextss {
@@ -90,7 +93,6 @@ body {
 	color: goldenrod;
 	cursor: pointer;
 }
-
 
 .iconfloat1 {
 	position: fixed;
@@ -196,8 +198,8 @@ h4 {
 }
 
 .contactme {
-	margin-top: 5%;
-	float: left;
+	padding-left: 0;
+	padding-bottom: 10%;
 }
 
 .img5 {
@@ -280,10 +282,7 @@ h4 {
 	height: 55px;
 	border: none;
 	background-color: #191a1e;
-    box-shadow:
-    0 0 60px 30px #fff,  
-    0 0 100px 60px rgb(255, 217, 0), 
-    0 0 140px 90px rgb(222, 231, 86); 
+	box-shadow: 0 0 60px 30px #fff, 0 0 70px 60px rgb(138, 134, 118), 0 0 90px 90px rgb(0, 0, 0);
 	border-radius: 50%;
 	margin-top: 20px;
 	transition: .3s;
@@ -291,7 +290,7 @@ h4 {
 }
 
 .modal {
-    background-color: #191a1e;
+	background-color: #191a1e;
 }
 
 .btn:active {
@@ -326,6 +325,7 @@ h4 {
 
 .innertitle {
 	margin: 25px;
+	justify-content: right;
 }
 
 .titlecontent {
@@ -357,6 +357,16 @@ h4 {
 	font-weight: 500;
 }
 
+.linkicon {
+	margin: .1em;
+	color: white;
+}
+
+.linkicon:hover {
+	color: goldenrod;
+	cursor: pointer;
+}
+
 .overlay {
 	position: fixed;
 	top: 0;
@@ -372,8 +382,6 @@ h4 {
 	width: 80%;
 	top: 0;
 	height: auto;
-	/* height: 89.1%; */
-	/* overflow: hidden; */
 	transition: all 1.3s;
 	left: 10%;
 	right: 10%;
@@ -395,9 +403,6 @@ h4 {
 .hidemenow {
 	display: none;
 }
-
-
-/* background animation */
 
 .hide2nd {
 	display: none;
@@ -429,29 +434,37 @@ h4 {
 
 .myworkunderline {
 	text-shadow: 1.2px 1.2px;
-    
 }
+
 .order:hover {
-    
-    -webkit-animation: bounce .25s infinite alternate;
-    -moz-animation: bounce .25s infinite alternate;
-    animation: bounce .25s infinite alternate;
-  }
+	-webkit-animation: bounce .25s infinite alternate;
+	-moz-animation: bounce .25s infinite alternate;
+	animation: bounce .25s infinite alternate;
+}
+
 .order {
-    
-    -webkit-animation: bounce .45s infinite alternate;
-    -moz-animation: bounce .45s infinite alternate;
-    animation: bounce .45s infinite alternate;
-  }
-  @-webkit-keyframes bounce {
-    to { -webkit-transform: scale(1.12); }
-  }
-  @-moz-keyframes bounce {
-    to { -moz-transform: scale(1.12); }
-  }
-  @keyframes bounce {
-    to { transform: scale(1.12); }
-  }
+	-webkit-animation: bounce .45s infinite alternate;
+	-moz-animation: bounce .45s infinite alternate;
+	animation: bounce .45s infinite alternate;
+}
+
+@-webkit-keyframes bounce {
+	to {
+		-webkit-transform: scale(1.12);
+	}
+}
+
+@-moz-keyframes bounce {
+	to {
+		-moz-transform: scale(1.12);
+	}
+}
+
+@keyframes bounce {
+	to {
+		transform: scale(1.12);
+	}
+}
 
 @keyframes movingBackground {
 	from {
