--- a/assets/style.css
+++ b/assets/style.css
@@ -282,8 +282,8 @@ h4 {
 	height: 55px;
 	border: none;
 	background-color: #191a1e;
-	box-shadow: 0 0 60px 30px #fff, 0 0 70px 60px rgb(138, 134, 118), 0 0 90px 90px rgb(0, 0, 0);
-	border-radius: 50%;
+	box-shadow: 0 0 60px 30px #fff, 0 0 30px 20px rgb(138, 134, 118), 0 0 40px 20px rgb(0, 0, 0);
+	/* border-radius: 50%; */
 	margin-top: 20px;
 	transition: .3s;
 	cursor: pointer;
